Fix for code scrollbar being cut off unless the library tree is expanded.

--- a/src/Spe/sitecore modules/PowerShell/Styles/ise.css
+++ b/src/Spe/sitecore modules/PowerShell/Styles/ise.css
@@ -571,3 +571,7 @@ nobr > .scTab_Hover {
 .scRibbonOpen {
     bottom: -22px;
 }
+
+#Content, #Wrapper, #Result {
+    width: 100% !important;
+}
